[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/GraphTheory/network_analysis/NetworkAnalysis.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="NetworkAnalysis" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="NetworkNodes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CentralNodes" type="Node3D" parent="NetworkNodes"]

[node name="PeripheralNodes" type="Node3D" parent="NetworkNodes"]

[node name="ClusterNodes" type="Node3D" parent="NetworkNodes"]

[node name="NetworkLabel" type="CSGBox3D" parent="NetworkNodes"]
size = Vector3(4, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="NetworkEdges" type="Node3D" parent="."]

[node name="ConnectionLines" type="Node3D" parent="NetworkEdges"]

[node name="AnalysisEngine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="EngineCore" type="CSGBox3D" parent="AnalysisEngine"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="EngineLabel" type="CSGBox3D" parent="AnalysisEngine"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="AnalysisMethods" type="Node3D" parent="AnalysisEngine"]

[node name="CentralityCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="ClusteringCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="SmallWorldCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="CommunityDetection" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="CommunityCore" type="CSGBox3D" parent="CommunityDetection"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="CommunityLabel" type="CSGBox3D" parent="CommunityDetection"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Communities" type="Node3D" parent="CommunityDetection"]

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="NetworkMetrics" type="Node3D" parent="."]

[node name="ClusteringMeter" type="Node3D" parent="NetworkMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="ClusteringBase" type="CSGBox3D" parent="NetworkMetrics/ClusteringMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="ClusteringIndicator" type="CSGSphere3D" parent="NetworkMetrics/ClusteringMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="ConnectivityMeter" type="Node3D" parent="NetworkMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="ConnectivityBase" type="CSGBox3D" parent="NetworkMetrics/ConnectivityMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="ConnectivityIndicator" type="CSGSphere3D" parent="NetworkMetrics/ConnectivityMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
